@@ -48,7 +48,7 @@
 #include <sybdb.h>
 #include "replacements.h"
 
-static char software_version[] = "$Id: defncopy.c,v 1.5 2004-11-05 09:06:46 freddy77 Exp $";
+static char software_version[] = "$Id: defncopy.c,v 1.6 2004-11-07 08:59:33 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
 int err_handler(DBPROCESS * dbproc, int severity, int dberr, int oserr, char *dberrstr, char *oserrstr);
@@ -122,14 +122,14 @@ main(int argc, char *argv[])
 	 * Override stdin, stdout, and stderr, as required 
 	 */
 	if (options.input_filename) {
-		if (freopen(options.input_filename, "r", stdin) < 0) {
+		if (freopen(options.input_filename, "r", stdin) == NULL) {
 			fprintf(stderr, "%s: unable to open %s: %s\n", options.appname, options.input_filename, strerror(errno));
 			exit(1);
 		}
 	}
 
 	if (options.output_filename) {
-		if (freopen(options.output_filename, "w", stdout) < 0) {
+		if (freopen(options.output_filename, "w", stdout) == NULL) {
 			fprintf(stderr, "%s: unable to open %s: %s\n", options.appname, options.output_filename, strerror(errno));
 			exit(1);
 		}
@@ -140,7 +140,7 @@ main(int argc, char *argv[])
 	} else {
 		static const char null_device[] = "/dev/null";
 		options.verbose = fopen(null_device, "w");
-		if (options.verbose < 0) {
+		if (options.verbose == NULL) {
 			fprintf(stderr, "%s:%d unable to open %s for verbose operation: %s\n", 
 					options.appname, __LINE__, null_device, strerror(errno));
 			exit(1);
